增强日志，重命名ui活动栏类，更新部分语言，优化平台检测逻辑，去除不需要的类